--- a/cap_2.ipynb
+++ b/cap_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f83bb4ad",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4886886f",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e7c0d83",
    "metadata": {},
    "outputs": [
@@ -117,17 +117,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fb7537e3",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5587/1987834250.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  alunos[4]\n",
+      "/tmp/ipykernel_5587/1987834250.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  alunos[-1]  # retorna o último elemento\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Bill'"
+       "'Jimi'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f29ced99",
    "metadata": {},
    "outputs": [
@@ -155,7 +165,7 @@
        "Name: alunos, dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3a61f390",
    "metadata": {},
    "outputs": [
@@ -181,17 +191,18 @@
      "text": [
       "relação de alunos aprovados:\n",
       "---------------------------\n",
+      "matrículas\n",
       "M02     Bob\n",
       "M13    Bill\n",
       "M14    Cris\n",
-      "dtype: object\n"
+      "Name: alunos, dtype: object\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2922/3448064857.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "/tmp/ipykernel_5587/3448064857.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(alunos[idx_aprovados])\n"
      ]
     }
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cfc25cba",
    "metadata": {},
    "outputs": [
@@ -226,12 +237,13 @@
       "existe o rótulo 'M99'? -> False\n",
       "------------------------\n",
       "existe o valor 'Bob'\n",
+      "matrículas\n",
       "M02     True\n",
       "M05    False\n",
       "M13    False\n",
       "M14    False\n",
       "M19    False\n",
-      "dtype: bool\n"
+      "Name: alunos, dtype: bool\n"
      ]
     }
    ],
@@ -253,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e626ff0e",
    "metadata": {},
    "outputs": [
@@ -307,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ea2586a2",
    "metadata": {},
    "outputs": [
@@ -345,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "95985370",
    "metadata": {},
    "outputs": [
@@ -411,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f46ea8ea",
    "metadata": {},
    "outputs": [
@@ -454,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f824b076",
    "metadata": {},
    "outputs": [
@@ -495,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "86d27da5",
    "metadata": {},
    "outputs": [
